city-guide: fix word wrap

--- a/city-guide/styles/Home.module.css
+++ b/city-guide/styles/Home.module.css
@@ -69,7 +69,7 @@
 .place h3 {
   flex: 0 0 12ch;
   font-size: 1rem;
-  word-break: break-all;
+  word-break: normal;
   display: inline-flex;
   hyphens: auto;
   padding-right: 1ch;
